@@ -1,306 +1,180 @@
-# Retracing publishing
+# Publishing to Maven Central
 
-1. Navigate to nodule folder, and generate pom file for that module
-```bash
-cd <module-folder>
-gradle generatePomFileForMavenPublication
-```
-2. Copy generated pom to module root
-```bash
-cp build/publications/maven/pom-default.xml pom-dist.xml
-```
+CafeAI publishes straight from Gradle to the **Sonatype Central Portal**
+(`central.sonatype.com`). No Maven, no hand-written POMs.
 
-3. Configure the remote server in *settings.xml*. If you haven't done so previously, then sign in to *https://central.sonatype.com/* 
-navigate to *https://central.sonatype.com/usertoken*. Generate a new user token, and then copy the server credentials into *settings.xml*
-Ensure that the *settings.xml* is in the parent project's root folder. 
+The [vanniktech `maven-publish` plugin](https://vanniktech.github.io/gradle-maven-publish-plugin/)
+generates the POM **and** the Gradle Module Metadata from each module's real
+dependency graph, builds the sources + javadoc jars, signs everything with GPG,
+and uploads the bundle. Because the POM is generated, transitive dependencies
+resolve correctly for downstream consumers — that was the bug in the old
+`pom-dist.xml` + `maven-shade-plugin` flow (shade stripped every compile
+dependency out of the published POM).
 
-```xml
-<settings>
-    <servers>
-        <!-- add your generated server credentials here -->
-        <server>
-            <!-- matched by publishing plugin in build section pf pom file -->
-            <id>central</id>
-            <username>${username}</username>
-            <password>${password}</password>
-        </server>
-    </servers>
-</settings>
-```
+Published coordinates: `com.akilisha.oss:<module>:<version>` (namespace verified
+on the Central Portal).
 
-4. Configure an activation profile in the *settings.xml* file, where commons properties can be configured and picked up. 
-This works only for non-top-level values in the pom.xml but are great for other resolvable values
+---
 
-```xml
-<profiles>
-    <profile>
-        <id>local</id>
-        <activation>
-            <!-- Actives automatically if you don't explicitly choose another profile -->
-            <activeByDefault>true</activeByDefault>
-        </activation>
-        <properties>
-            <revision>0.1.0-SNAPSHOT</revision>
-            <release.version>23</release.version>
-        </properties>
-    </profile>
-    <profile>
-        <id>distribution</id>
-        <properties>
-            <revision>0.1.1</revision>
-            <release.version>23</release.version>
-        </properties>
-    </profile>
-</profiles>
+## One-time machine setup
+
+Two things are needed: **Central Portal credentials** (so Gradle can upload) and a
+**GPG signing key** (Maven Central rejects unsigned artifacts). Both are read by
+Gradle from a properties file.
+
+### Where the properties file goes
+
+Gradle loads `gradle.properties` from exactly two places:
+
+| Path | Use |
+|---|---|
+| `D:\Users\<you>\.gradle\gradle.properties` | **Recommended.** Machine-global, never in any repo. |
+| `D:\Projects\java\cafeai\gradle.properties` | Project root. Would have to be git-ignored. |
+
+`<project>\.gradle\gradle.properties` is **not** loaded — that `.gradle\` folder is
+Gradle's build cache. Anything you put there is silently ignored.
+
+### 1. Central Portal credentials
+
+Copy the token from `settings.xml` (the `<username>` / `<password>` under
+`<server id="central">`) into your `gradle.properties` under these names:
+
+```properties
+mavenCentralUsername=<the settings.xml username>
+mavenCentralPassword=<the settings.xml password>
 ```
 
->If not using the default activation profile, then the target profile should be specified in the command, for example:
-```agsl
-mvn clean install -Pdistribution.
+### 2. GPG signing key
+
+You already have the key — releases `0.1.0` / `0.1.1` were signed with it. It's
+`71337946596FE931DCA600DD8DE042C053D6492A` (short id **`53D6492A`**, uid
+*"Jarred Web … maven central repo"*). The old Maven flow got its passphrase from
+the GPG agent; Gradle needs it spelled out.
+
+**Method A — keyring file (simplest here; you're already half-configured for it).**
+Your `~\.gradle\gradle.properties` has `signing.keyId` / `signing.password` /
+`signing.secretKeyRingFile` lines pointing at a **key that no longer exists**
+(`503641A8`) and a **stale keyring file**. Replace all three:
+
+```powershell
+# export just the release key into its own keyring file
+gpg --export-secret-keys 71337946596FE931DCA600DD8DE042C053D6492A > $HOME\.gnupg\cafeai-secring.gpg
 ```
 
-5. Update *GroupId* in the deployment pom file to match namespace in maven central, if it doesn't already
-```xml
-<groupId>com.akilisha.oss</groupId>
+```properties
+signing.keyId=53D6492A
+signing.password=<passphrase for key 53D6492A>
+signing.secretKeyRingFile=D:/Users/<you>/.gnupg/cafeai-secring.gpg
 ```
 
-6. Ensure that the published artifact is not a SNAPSHOT version
+`signing.keyId` is the **last 8 hex digits** of the fingerprint. Use forward
+slashes (or `\\`) in the path. Also delete the leftover `user=` / `pwd=` lines
+(old OSSRH, unused).
 
-```xml
-<!-- don't use SNAPSHOT -->
-<version>0.1.0</version>
+**Method B — in-memory key (use on CI, or to avoid the keyring file).**
+`signingInMemoryKey` is the ASCII-armored *private* key itself;
+`signingInMemoryKeyPassword` is its passphrase.
+
+```powershell
+# prints a multi-line PGP block — this is the value of signingInMemoryKey
+gpg --armor --export-secret-keys 71337946596FE931DCA600DD8DE042C053D6492A
 ```
 
-7. In the *pom-dist.xml* file, configure license, developer details and repository type. Adjust values to match your project details
-```xml
-<packaging>jar</packaging>
-<name>cafeai-core</name>
-<description>CafeAi core module</description>
-<url>https://github.com/akilisha/cafeai-core</url>
+In a properties file it must be **one line** with real newlines written as `\n`.
+That's fiddly, so on CI pass it via env var instead (real newlines are fine):
 
-<licenses>
- <license>
-   <name>The Apache License, Version 2.0</name>
-   <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
- </license>
-</licenses>
-
-<developers>
- <developer>
-   <id>m41na</id>
-   <name>Maina, Stephen</name>
-   <email>m41na@yahoo.com</email>
- </developer>
-</developers>
-
-<scm>
- <connection>scm:git:git://github.com/akilisha/cafeai-core.git</connection>
- <developerConnection>scm:git:ssh://github.com/akilisha/cafeai-core.git</developerConnection>
- <url>https://github.com/akilisha/cafeai-core</url>
-</scm>
+```powershell
+$env:ORG_GRADLE_PROJECT_mavenCentralUsername   = '<token username>'
+$env:ORG_GRADLE_PROJECT_mavenCentralPassword   = '<token password>'
+$env:ORG_GRADLE_PROJECT_signingInMemoryKey     = (gpg --armor --export-secret-keys 53D6492A | Out-String)
+$env:ORG_GRADLE_PROJECT_signingInMemoryKeyPassword = '<passphrase>'
 ```
 
-8. In the *pom-dist.xml* file, remove all *&lt;scope&gt;runtime&lt;/scope&gt;* entries from every dependency and also add testing dependencies
-```xml
-<properties>
-    <junit.version>6.0.3</junit.version>
-    <assertj.version>3.27.7</assertj.version>
-    <mockito.version>5.23.0</mockito.version>
-</properties>
+Pick **one** of A or B, not both.
 
-<dependencies>
-    <!-- JUnit Jupiter API & Engine -->
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-    </dependency>
+### 3. Publish your public key
 
-    <!-- JUnit Jupiter Parameterized Tests -->
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-params</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-    </dependency>
+Central verifies the signature against a keyserver. Once:
 
-    <!-- AssertJ Fluent Assertions -->
-    <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>${assertj.version}</version>
-        <scope>test</scope>
-    </dependency>
-
-    <!-- Mockito Core -->
-    <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-    </dependency>
-
-    <!-- Mockito JUnit Jupiter Extension -->
-    <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-junit-jupiter</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
+```powershell
+gpg --keyserver keys.openpgp.org --send-keys 53D6492A
 ```
 
-9. In the *pom-dist.xml* file, configure the plugins necessary to satisfy the publishing requirements
-```xml
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.sonatype.central</groupId>
-            <artifactId>central-publishing-maven-plugin</artifactId>
-            <version>0.9.0</version>
-            <extensions>true</extensions>
-            <configuration>
-                <!-- should match name of server credentials specified in settings.xml -->
-                <publishingServerId>central</publishingServerId>
-            </configuration>
-        </plugin>
+---
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.13.0</version> 
-            <configuration>
-                <!-- release.version value is configured in the settings.xml distribution profile -->
-                <release>${release.version}</release>
-                <compilerArgs>
-                    <arg>--enable-preview</arg>
-                </compilerArgs>
-            </configuration>
-        </plugin>
+## Cutting a release
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>3.3.1</version>
-            <executions>
-                <execution>
-                    <id>attach-sources</id>
-                    <goals>
-                        <goal>jar-no-fork</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+1. **Bump the version** in `build.gradle` (the `subprojects { version = '…' }`
+   line). All modules share it. Central versions are immutable — never re-publish
+   a number.
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.11.2</version> <!-- Use the latest version -->
-            <configuration>
-                <doclint>none</doclint>
-            </configuration>
-            <executions>
-                <execution>
-                    <id>attach-javadocs</id>
-                    <goals>
-                        <goal>jar</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+2. **Build and test.**
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>3.2.2</version>
-            <executions>
-                <execution>
-                    <id>sign-artifacts</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>sign</goal>
-                    </goals>
-                    <configuration>
-                        <useAgent>true</useAgent>
-                        <defaultKeyring>false</defaultKeyring>
-                        <keyname>71337946596FE931DCA600DD8DE042C053D6492A</keyname>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
+   ```bash
+   ./gradlew clean build
+   ```
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>3.5.1</version> 
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                    <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <manifestEntries>
-                                    <Implementation-Title>CafeAi Core Module</Implementation-Title>
-                                    <Implementation-Version>${distribution.version}</Implementation-Version>
-                                    <Implementation-Vendor>CafeAi</Implementation-Vendor>
-                                </manifestEntries>
-                            </transformer>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                        </transformers>
-                        <finalName>cafeai-core</finalName>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
+3. **Smoke-test the artifacts locally** (optional).
+
+   ```bash
+   ./gradlew publishToMavenLocal
+   ```
+
+   Inspect `~/.m2/repository/com/akilisha/oss/cafeai-core/<version>/` — you want
+   `.jar` (~200 KB, *not* a fat jar), `-sources.jar`, `-javadoc.jar`, `.pom`,
+   `.module`, and a `.asc` next to each.
+
+4. **Upload every module.**
+
+   ```bash
+   ./gradlew publishToMavenCentral
+   ```
+
+   Runs for all nine opted-in modules in one invocation; the plugin stages them
+   together and uploads a bundle. Inter-module dependencies
+   (`com.akilisha.oss:cafeai-core:<version>`, …) are wired automatically, with no
+   ordering requirement.
+
+5. **Release it.** Open <https://central.sonatype.com/publishing>. You'll see the
+   uploaded deployment(s) in *Validated* state — check the contents, then hit
+   **Publish**. Maven Central picks it up in ~15–30 min; `repo1` sync follows
+   within a couple of hours.
+
+   To skip the manual gate, run `./gradlew publishAndReleaseToMavenCentral` (or
+   change `publishToMavenCentral()` → `publishToMavenCentral(true)` in
+   `gradle/maven-central.gradle`) and it releases itself once validation passes.
+
+---
+
+## What each module opts into
+
+A module that ships to Central has **one line** in its `build.gradle`:
+
+```groovy
+description = 'What this module is.'          // becomes <description> in the POM
+
+apply from: "$rootDir/gradle/maven-central.gradle"
 ```
 
-10. Build the project to ensures tests pass and binaries as created
-```bash
-mvn --settings ../settings.xml -f pom-dist.xml -Pdistribution clean package
-```
+`gradle/maven-central.gradle` holds everything shared: the plugin, signing, and
+the common POM fields (license, developer, SCM, project URL). `cafeai-examples`
+does **not** apply it — it's a runnable sample, not a library.
 
-11. Publish binaries to maven central, then manually publish them in *https://central.sonatype.com/publishing* to public repo
-```bash
-mvn --settings ../settings.xml -f pom-dist.xml -Pdistribution -DskipTests deploy
-```
+Adding a new library module = add those two lines. Nothing else.
 
-12. Miscellaneous - Manually update the pom for deploying. Configuring the 'maven-gpg-plugin' in particular is tricky
-```xml
-<!-- manual mode -->
-<configuration>
-    <useAgent>true</useAgent>
-    <defaultKeyring>false</defaultKeyring>
-    <keyname>your-key-id</keyname>
-</configuration>
+---
 
-<!-- auto mode -->
-<configuration>
-    <useAgent>true</useAgent>
-    <defaultKeyring>false</defaultKeyring>
-    <keyname>your-key-id</keyname>
-    <gpgArguments>
-        <arg>--pinentry-mode</arg>
-        <arg>loopback</arg>
-    </gpgArguments>
-</configuration>
-```
+## How versions resolve for consumers
 
-13. Order of publishing
-```bash
-cafeai-core
-cafeai-memory
-cafeai-guardrails
-cafeai-observability
-cafeai-views-mustache
-cafeai-streaming
-cafeai-connect
-cafeai-rag
-cafeai-security
-cafeai-examples
-```
+`cafeai-core` depends on Helidon and LangChain4j through their BOMs
+(`implementation platform("io.helidon:helidon-bom:…")`). The generated metadata
+carries this through:
+
+- **`.pom`** — BOMs appear under `<dependencyManagement>` as `<scope>import</scope>`;
+  the individual artifacts are version-less `<dependency>` entries. Maven
+  consumers resolve the versions from the imported BOMs.
+- **`.module`** — the BOMs are included as `platform` dependencies with
+  `endorseStrictVersions`. Gradle consumers resolve through them.
+
+Either way the consumer gets a complete, resolvable graph without listing a
+single Helidon coordinate themselves.
